name:                hello-world
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/elviejo79/hello-world#readme
license:             BSD3
license-file:        LICENSE
author:              Alejandro Garcia F.
maintainer:          agarciafdz@gmail.com
copyright:           GPLv3 Affero
category:            value
build-type:          Simple
cabal-version:       >=1.10

executable hello-world
  hs-source-dirs:      src
  main-is:             Main.lhs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
