name:                counter-w-spock
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/elviejo79/counter-w-spock#readme
license:             BSD3
license-file:        LICENSE
author:              Alejandro Garcia F.
maintainer:          agarciafdz@gmail.com
copyright:           GPLv3 Affero
category:            value
build-type:          Simple
cabal-version:       >=1.10

executable counter-w-spock
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Spock >= 0.11
                     , mtl
                     , text
