name:                echo-w-spock
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/elviejo79/echo-w-spock#readme
license:             BSD3
license-file:        LICENSE
author:              Alejandro Garcia F.
maintainer:          agarciafdz@gmail.com
copyright:           GPLv3 Affero
category:            value
build-type:          Simple
cabal-version:       >=1.10

executable echo-w-spock
  hs-source-dirs:      app
  main-is:             Main.lhs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , stache
                     , bytestring
                     , text
                     , transformers
                     , bcrypt
                     , http-types
                     , sqlite-simple
                     , wai-extra
                     , Spock >= 0.11
